--- a/mlflow/config.yaml
+++ b/mlflow/config.yaml
@@ -5,6 +5,6 @@ routes:
       provider: openai
       name: llama3
       config:
-        openai_api_key: "ollama"
+        openai_api_key: ""
         # https://ollama.com/blog/openai-compatibility
-        openai_api_base: http://llm:11434/v1
+        openai_api_base: http://host.docker.internal:11434/v1
