--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
-LLM_HOST=http://host.docker.internal
-LLM_PORT=11434
-
-MLFLOW_SERVER_PORT=5000
-
 JUPYTER_PORT=8888
 JUPYTER_USER=minwook
 JUPYTER_UID=1000
 JUPYTER_GID=1000
 
-OLLAMA_UI_PORT=8080
+MLFLOW_SERVER_PORT=5000
+MLFLOW_TRACKING_URI=http://mlflow-server:5000
+
+OLLAMA_PORT=11434
+OLLAMA_URI=http://host.docker.internal:11434
