--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ MLFLOW_SERVER_PORT=5000
 MLFLOW_TRACKING_URI=http://mlflow-server:5000
 
 OLLAMA_PORT=11434
-OLLAMA_URI=http://host.docker.internal:11434
+OLLAMA_URI=http://ollama:11434
