--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ JUPYTER_GID=1000
 
 MLFLOW_SERVER_PORT=5000
 MLFLOW_TRACKING_URI=http://mlflow-server:5000
+MLFLOW_DEPLOYMENTS_TARGET=http://mlflow-deployments:5000
 
 OLLAMA_PORT=11434
 OLLAMA_URI=http://ollama:11434
