--- a/llm_server/requirements.txt
+++ b/llm_server/requirements.txt
@@ -92,6 +92,7 @@ python-dateutil==2.9.0
 pytz==2024.1
 PyYAML==6.0.1
 querystring-parser==1.2.4
+regex==2024.4.28
 requests==2.31.0
 rich==13.7.1
 scikit-learn==1.4.2
@@ -113,6 +114,7 @@ tenacity==8.2.3
 textstat==0.7.3
 thinc==8.2.2
 threadpoolctl==3.5.0
+tiktoken==0.5.2
 tqdm==4.66.2
 typer==0.9.4
 typing_extensions==4.11.0
